--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -7,7 +7,7 @@
     <div class="wrapContainer" [ngClass]="{'justify-between': home.isDesktop}">
         <div data-aos="fade-up" class="haveAProblemContainer" [ngClass]="{'wrapActive-40': home.isDesktop}">
             <h3 translate="">Got a Problem to solve?</h3>
-            <div translate="">
+            <div translate="" [ngClass]="{'font20': home.isDesktopXl}">
                 So, if you have an idea and want someone to have a look at it? Get in touch or something.
                 <br>
                 <br>
