--- a/src/app/my-projects/my-projects.component.scss
+++ b/src/app/my-projects/my-projects.component.scss
@@ -12,6 +12,7 @@ section {
     align-items: center;
     font-size: 16px;
     position: relative;
+    z-index: 85;
 
     .headlineContainer {
         width: 100%;
