--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -16,7 +16,7 @@
                 <div [ngClass]="{'skillsLine': home.isDesktop}" class="greenLine"></div>
             </div>
 
-            <div [ngClass]="{'paddingDesktop25': home.isDesktop}" class="skillsText" data-aos="fade-up" translate="">
+            <div [ngClass]="{'paddingDesktop25': home.isDesktop}" class="skillsText" data-aos="fade-up" translate="" [ngClass]="{'font20': home.isDesktopXl}">
                 I have experience in building projects using many frontend technologies.
                 <br>
                 My priority is to constantly improve these skills, but I am never averse to new concepts.
