--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,12 @@
 <section class="header">
-    <div class="logo">Ja<span class="c">c</span>o<span class="b">b</span></div>
-
+    <a href="https://jacob-hengsbach.com"   class="logo" (click)="home.showContent('startScreenContainer')">
+      Ja<span class="c">c</span>o<span class="b">b</span>
+    </a>
+  
     <div *ngIf="home.isDesktop || home.isTablet" class="navbar">
-        <a (click)="home.onClick('aboutMe')" translate="">About me</a>
-        <a (click)="home.onClick('mySkills')">Skills</a>
-        <a (click)="home.onClick('projects')">Portfolio</a>
+        <a (click)="home.showContent('aboutMe')" translate="">About me</a>
+        <a (click)="home.showContent('mySkills')">Skills</a>
+        <a (click)="home.showContent('projects')">Portfolio</a>
 
         <div class="languageContainer">
             <span class="en" [ngClass]="{'activeLang': home.defaultLanguage}"
@@ -18,9 +20,9 @@
     <div #$nav id="nav" class="navigation">
         <div class="navigation__inner">
           <!--  Hamburger-Menu-Content   -->
-          <a (click)="home.onClick('aboutMe')" (click)="this.animmateNavIcon()" translate="">About me</a>
-          <a (click)="home.onClick('mySkills')" (click)="this.animmateNavIcon()">Skills</a>
-          <a (click)="home.onClick('projects')" (click)="this.animmateNavIcon()">Portfolio</a>
+          <a (click)="home.showContent('aboutMe')" (click)="this.animmateNavIcon()" translate="">About me</a>
+          <a (click)="home.showContent('mySkills')" (click)="this.animmateNavIcon()">Skills</a>
+          <a (click)="home.showContent('projects')" (click)="this.animmateNavIcon()">Portfolio</a>
 
           <div class="languageContainer">
             <span class="en" [ngClass]="{'activeLang': home.defaultLanguage}"
