--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -2,6 +2,8 @@ $bgColor: rgb(20, 29, 47);
 $mainColor: rgb(75, 71, 255);
 $secondColor: rgb(0, 190, 232);
 
+    
+
 .aboutMeSection{
     display: flex;
     flex-wrap: wrap-reverse;
@@ -11,17 +13,24 @@ $secondColor: rgb(0, 190, 232);
     color: white;
     font-size: 16px;
     line-height: 20px;
+    position: relative;
 
-    .vectorFullsreen{
-        object-fit: cover;
+
+    .vectorContainer{
+        width: 100%;
+        height: min-content;
         position: absolute;
-        top: 175vh;
-        width: 100vw;
-        height: 60vh;
-        max-width: 100%;
-        object-position: 0% 0%;
-        z-index: 81;
+        bottom: 60px;
+        height: 100px;
+        z-index: 82;
+        
+        .vectorFullsreen{
+            width: 100%;
+            z-index: 82;
+        }
     }
+
+
 
     .personalImageContainer{
         position: relative;
@@ -30,23 +39,20 @@ $secondColor: rgb(0, 190, 232);
         height: 60vh;
         z-index: 80;
         margin-top: 42px;
-        overflow-x: hidden;
-        overflow-y: hidden;
 
         .imgColorBg, .personalImg{
-            width: 100%;
-            height: 60vh;
+            width: 90%;
             position: absolute;
-            bottom: 0;
-            right: 0;
+            bottom: -60px;
+            left: 10%;
             object-fit: contain;
         }
-
+        
         .vector{
             position: absolute;
             top: 50vh;
+            object-fit: cover;
             width: 100vw;
-            height: 20vh;
             max-width: 100%;
         }
     }
@@ -61,6 +67,7 @@ $secondColor: rgb(0, 190, 232);
         z-index: 83;
         padding-left: 10%;
         padding-right: 10%;
+        margin-bottom: 100px;
 
         h2{
             font-size: 45px;
@@ -88,7 +95,12 @@ $secondColor: rgb(0, 190, 232);
     width: calc(40%) !important;
 }
 
-.personalImgDesktop{
+.personalImgMobile{
+    margin-bottom: 50px !important;
+}
+
+.mobileText{
+    margin-bottom: 0px !important;
 }
 
 .tabletVector{
