--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -22,6 +22,9 @@ $secondColor: rgb(0, 190, 232);
         font-size: 45px;
         font-weight: 800;
         z-index: 99;
+        text-decoration: none;
+        color: white;
+        cursor: pointer;
 
         .c{
           color: $mainColor;
