--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -103,7 +103,7 @@ $secondColor: rgb(0, 190, 232);
     margin-bottom: 0px !important;
 }
 
-.tabletVector{
-    top: 175vh !important; 
+.vectorXL{
+    bottom: 120px !important; 
 }
 
