--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,6 +23,6 @@
     </div>
 
     <div class="impressum" [ngClass]="{'text-align-left': home.isDesktop}">
-        <a (click)="home.showImpress()" href="#" translate="">Impress</a>
+        <a (click)="home.showImpress()" translate="">Impress</a>
     </div>
 </section>
