--- a/src/app/legal-notice/legal-notice.component.html
+++ b/src/app/legal-notice/legal-notice.component.html
@@ -1,8 +1,7 @@
-<div id="impress" class="helpScreenSection" *ngIf="home.impressOn" [ngClass]="{'font20': home.isDesktopXl}">
+<div id="impress" class="helpScreenSection" [ngClass]="{'font20': home.isDesktopXl}">
     <div class="helpScreenSectionHeadline">
         <h1>Impressum</h1>
-        <!-- <img onclick="returnToLastActivePage()" class="contactsDetailHeadPic2" src="./img/returnArrowDark.svg"
-            alt="returnToListBtn"> -->
+
     </div>
     <h3>Angaben gemäß § 5 TMG</h3>
     <p>Jacob Hengsbach<br>
