--- a/src/app/my-projects/my-projects.component.scss
+++ b/src/app/my-projects/my-projects.component.scss
@@ -154,3 +154,7 @@ section {
 .lineWidthDesktop{
     width: calc(50% - 157px) !important;
 }
+
+.text-align-left{
+    text-align: start !important;
+}
