--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,4 +1,4 @@
-<section id="startScreenContainer" class="startScreenContainer" *ngIf="!home.impressOn">
+<section id="startScreenContainer" class="startScreenContainer">
     <div class="coloredParts">
         <img class="blueColorSpot" [ngClass]="{'blueColorMobile': home.isMobile}"
         src="../../assets/images/coloredBgParts/Purple shadow (2).png" alt="">
