--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -31,7 +31,7 @@
     <div [ngClass]="{'wrapActive-40': home.isDesktop}" class="personalImageContainer">
         <img class="imgColorBg" src="../../assets/images/coloredBgParts/Group 2.png" alt=""
             [ngClass]="{'personalImgMobile': home.isMobile}">
-        <img class="personalImg" src="../../assets/images/personal_imgs/hero character photo.png" alt=""
+        <img class="personalImg" src="../../assets/images/personal_imgs/owner_full.png" alt=""
             [ngClass]="{'personalImgMobile': home.isMobile}">
 
         <img *ngIf="home.isMobile" class="vector" src="../../assets/images/coloredBgParts/Vector (1).png" alt="">
